# dungeon-of-abstraction

./: .gitignore  CHANGELOG.md  README.md  demo_neurodungeon.py  dungeon.yml  pyproject.toml  pytest.ini  sbom.json
.github/workflows/: ci.yml
demo_fail/: log.jsonl
demo_life_loss/: log.jsonl
demo_life_loss/floor_1/: rev_0.txt
demo_success/: log.jsonl
demo_success/floor_2/: rev_0.txt
demo_success/floor_3/: rev_0.txt
demo_success/floor_4/: rev_0.txt
demo_success/floor_5/: rev_0.txt
examples/: basic.yml
neurodungeon/: __init__.py  agents.py  agents_llm.py  config.py  dataclasses.py  migrate.py  models.py  orchestrator.py  report.py  run.py  sandbox.py  webapp.py
neurodungeon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
runs/cli_run/: log.jsonl
runs/cli_run/floor_0/: rev_0.txt
runs/cli_run/floor_1/: rev_0.txt
runs/cli_run/floor_6/: rev_0.txt
runs/cli_run/floor_7/: rev_0.txt
tests/: test_config.py  test_core.py  test_examples.py  test_limits.py  test_llm_sandbox.py  test_report.py
