[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neurodungeon"
version = "0.3.0.dev0"
description = "Reference implementation of the NeuroDungeon protocol"
authors = [{ name = "OpenAI", email = "noreply@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hypothesis>=6.135.9",
    "jinja2",
    "pydantic>=2",
    "mypy>=1.16.0",
    "openai>=1.86.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "pyyaml>=6.0.2",
    "flask>=3.1.1",
]


[project.scripts]
neurodungeon = "neurodungeon.run:cli"
neurodungeon-web = "neurodungeon.webapp:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "hypothesis",
    "mypy",
]
llm = [
    "openai>=1,<2",
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.setuptools]
packages = ["neurodungeon"]
